syntax = "proto3";

package main;
option go_package = "/proto/generated_files;running_trackerpb";

import "trainers.proto";
import "activities.proto";

message AddTrainersResponse {
  string message = 1;
  repeated string ids = 2;
}

message GetTrainersResponse {
  string message = 1;
  repeated Trainer trainers = 2;
}

message UpdateTrainersResponse {
  string message = 1;
  repeated string ids = 2;
}

message DeleteTrainersResponse {
  string message = 1;
  repeated string ids = 2;
}

message AddActivitiesResponse {
  string message = 1;
  repeated string ids = 2;
}

message GetActivitiesResponse {
  string message = 1;
  repeated Activity activities = 2;
}

message HealthCheckResponse {
  enum ServiceStatus {
    SERVING = 0;
    NOT_SERVING = 1;
  }
  ServiceStatus status = 1;
}